# uzpp

./: .gitignore  ANALYSIS_REPORT.md  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENGINEERING_CONCLUSIONS.md  ENGINEERING_CONCLUSIONS_FINAL.md  FINAL_DELIVERY_CHECKLIST.md  FINAL_TEST_REPORT.ps1  LICENSE  NEXT_SESSION_PLAN.md  PROJECT_COMPLETION_REPORT.md  PROJECT_OVERVIEW_RU.md  QUICK_REFERENCE_SUMMARY.txt  README.md  README_TESTING.txt  README_TESTING_FINAL.md  RELEASE_NOTES_v1.1.md  SECURITY.md  SPEC.md  TECHNICAL_ANALYSIS.md  TECHNICAL_ANALYSIS_FINAL.md  TECHNICAL_REPORT_RU.md  TECHNICAL_SUMMARY.md  TESTING_INDEX.md  TESTING_INDEX_FINAL.md  TESTING_REPORT_2026_05_07.md  TESTING_REPORT_FINAL_2026.md  TEST_SUMMARY.ps1  TEXNIK_HISOBOT.md  UZPP_CONTEXT.md  WORK_PLAN.md  aa.uzpp  build_release.ps1  demo_tizim.uzpp  out.txt  run_tests.ps1  salomdunyo.uzpp  (+20 more)
.github/: PULL_REQUEST_TEMPLATE.md
docs/: getting-started.md  stdlib-status.md  uz++ dasturlash tili darslik.docx
examples/: 01_salom_dunyo.uzpp  02_ozgaruvchilar.uzpp  03_funksiyalar.uzpp  04_sinflar.uzpp  05_natija.uzpp  06_moslik.uzpp  07_asinxron.uzpp  08_kolleksiyalar.uzpp  09_json.uzpp  10_ilgor.uzpp
loyihalar/: a.uzpp
misollar/: 01_salom_dunyo.uzpp  02_fizzbuzz.uzpp  03_rekursiya.uzpp  04_sinflar.uzpp  05_kolleksiyalar.uzpp  06_xatolik_boshqaruvi.uzpp  07_matn_ishlash.uzpp  08_json_ishlash.uzpp  09_ko'p_oqimlilik.uzpp  09_kop_oqimlilik.uzpp  10_ilg'or_dasturlash.uzpp  10_ilgor_dasturlash.uzpp
phase12_demo/: uzpp.toml
src/: ast.h  codegen.cpp  codegen.h  (+15 more)
(+161 files in other folders)
